<resources>
    <string name="app_name">Control Energetico</string>
    <string name="title_home">Recibos</string>
    <string name="title_dashboard">Panel</string>
    <string name="title_notifications">Perfil</string>
    <string name="todo">todo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrar_button">Registrar Recibo</string>
    <string name="InitConsumo">Lectura Inicial</string>
    <string name="FechaInicio">Fecha Inicio</string>
    <string name="guardar_lectura">Guardar Lectura</string>
    <string name="ActualConsumo">Lectura Actual</string>
    <string name="registrar_profile">Registrar Perfil</string>
    <string name="lectura_anterior_kwh">Lectura Anterior (kWh)</string>
    <string name="lectura_actual_kwh">Lectura Actual (kWh)</string>
    <string name="lectura">Lectura</string>
    <string name="lectura_final_promedio">Lectura Final (Promedio)</string>
    <string name="consumo_promedio_kwh_dia">Consumo Promedio (kWh/Dia)</string>
    <string name="promedio_kwh_dia">Promedio (kWh)</string>
    <string name="final_promedio">Promedio Final</string>
    <string name="fechafin">Fin</string>
    <string name="total">Total</string>
    <string name="a_p_y_cz">A.P y Cz</string>
    <string name="energia">Energia</string>
    <string name="reg_ine">Reg INE</string>
    <string name="Inicio">Inicio</string>
    <string name="nombre">Nombre</string>
    <string name="tarifa">Tarifa</string>
    <string name="alumbrado_publico">Alumbrado Publico</string>
    <string name="departamento">Departamento</string>
    <string name="municipio">Municipio</string>
    <string name="historico_consumo">Histórico de Consumo</string>
    <string name="ver_mas">Ver más</string>
    <string name="ConsumoMes">Consumo del mes</string>
    <string name="configuracion">Configuración</string>
    <string name="perfil_usuario">Perfil de usuario</string>
    <string name="privacidad_y_seguridad">Privacidad y Seguridad</string>
    <string name="almacenamiento_e_informacion">Almacenamiento e Información</string>
    <string name="Tema">Tema</string>
    <string name="Lenguaje">Lenguaje</string>
    <string name="soporte">Soporte</string>
    <string name="preguntame">Preguntame</string>
    <string name="FAQ">F A Q</string>
    <string name="politica_privacidad">Politica de Privacidad</string>
    <string name="version_actual">Version 2.0.5</string>
    <string name="search">Buscar</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="bienvenido">Bienvenido a</string>
    <string name="ya_cuenta">¿Ya tiene una cuenta?</string>
    <string name="modo_obscuro">Modo Obscuro</string>
    <string name="configuraci_n">Configuración</string>
    <string name="editar_detalles_personales">Editar detalles personales</string>
    <string name="perfil">Perfil</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="regional">Regional</string>
    <string name="salir">Salir</string>
    <string name="or">or</string>
    <string name="visualizar_lecturas">Visualizar Lecturas</string>
</resources>