<?xml version="1.0" encoding="utf-8" ?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lytInvoice"
    android:focusable="true"
    android:clickable="true"
    android:clipChildren="true"
    android:layout_margin="2dp"
    android:foreground="@drawable/ripple_transparent"
    style="@style/Linear_Vertical">

    <LinearLayout
        android:id="@+id/layoutWrapper"
        style="@style/Linear_Horizontal"
        android:background="@color/white"
        android:baselineAligned="false"
        android:paddingStart="2.0dip"
        android:paddingTop="15.0dip"
        android:paddingEnd="2.0dip"
        android:paddingBottom="15.0dip"
        android:weightSum="10.0">

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="4.0"
            android:background="@drawable/border_right_gray"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:textColor="@color/ColorSecondaryText"
                    android:id="@+id/txtLabelFlag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="12.0sp" />

                <TextView
                    android:id="@+id/txtTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="5.0dip"
                    tools:text="C$ 0.00"
                    android:textColor="@color/ColorPrimaryText"
                    android:textSize="18.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:layout_marginBottom="10.0dip"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgView"
                        android:layout_width="30dp"
                        android:layout_height="30.0dip"
                        android:src="@drawable/icon_checked"
                        android:contentDescription="@string/todo" />
                </LinearLayout>

                <TextView
                    android:textColor="@color/ColorSecondaryText"
                    android:id="@+id/txtTotalkWh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    tools:text="138 kWh"
                    android:textSize="12.0sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="212dp"
            android:layout_weight="6.0"
            android:orientation="vertical"
            android:paddingStart="10.0dip"
            android:paddingEnd="0.0dip">

            <LinearLayout
                style="@style/Linear_Vertical"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/txtTipo"
                    style="@style/Text_H4"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:hint="Tipo de Consumo"
                    android:text="T-01"
                    android:textColor="@color/black_6"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtInvoiceNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    tools:text="INV-001"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14.0sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/border_top_bottom_gray"
                android:orientation="horizontal"
                android:paddingTop="15.0dip"
                android:paddingBottom="15.0dip"
                android:weightSum="10.0"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.0"
                    android:background="@drawable/border_right_gray"
                    android:gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/ColorSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Inicio"
                        android:textSize="14.0sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txtInitDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4.0dip"
                        tools:text="Sep, 12 2015"
                        android:textColor="@color/ColorPrimaryText"
                        android:textSize="14.0sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.0"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:paddingStart="15.0dip"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:textColor="@color/ColorSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fechafin"
                        android:textSize="14.0sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txtEndDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4.0dip"
                        tools:text="Sep, 12 2015"
                        android:textColor="@color/ColorPrimaryText"
                        android:textSize="14.0sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:orientation="horizontal"
                android:weightSum="9.0"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/ColorSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/a_p_y_cz"
                        android:gravity="center"
                        android:textSize="14.0sp" />

                    <TextView
                        android:id="@+id/txtApCz"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="5.0dip"
                        android:ellipsize="end"
                        android:maxLines="1"
                        tools:text="C$ 135.36"
                        android:textColor="@color/ColorPrimaryText"
                        android:textSize="14.0sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/ColorSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/energia"
                        android:textSize="14.0sp" />

                    <TextView
                        android:id="@+id/txtEnergiaAmt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5.0dip"
                        android:ellipsize="end"
                        android:maxLines="1"
                        tools:text="C$ 723.72"
                        android:textColor="@color/ColorPrimaryText"
                        android:textSize="14.0sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/ColorSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reg_ine"
                        android:textSize="14.0sp" />

                    <TextView
                        android:id="@+id/txtRegINE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5.0dip"
                        android:ellipsize="end"
                        android:maxLines="1"
                        tools:text="C$ 5.56"
                        android:textColor="@color/ColorPrimaryText"
                        android:textSize="14.0sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
