<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/contentBodyColor"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/BtnCerrar"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:background="?selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_chevron_left"
            tools:ignore="ContentDescription"
            app:tint="@color/contentTextColor" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/registrar_button"
            android:textSize="18sp"
            app:fontFamily="sans-serif-medium" />

        <ImageButton
            android:id="@+id/BtnConfirmar2"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:background="?selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_baseline_check_24"
            tools:ignore="ContentDescription"
            app:tint="@color/contentTextColor" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/spacing_mxlarge"
            android:paddingTop="@dimen/spacing_medium"
            android:paddingRight="@dimen/spacing_mxlarge"
            android:paddingBottom="@dimen/spacing_xxlarge">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="36.7dp"
                app:startIconDrawable="@drawable/ic_baseline_electrical_services_24"
                app:errorTextAppearance="@style/error_appearance"
                app:startIconTint="@color/contentTextColor"
                android:hint="@string/InitConsumo"
                app:fontFamily="@font/poppins"
                app:errorEnabled="true"
                android:id="@+id/lytConsumoInicial">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TxtConsumoInicial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14.0sp"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16.7dp"
                app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
                app:errorTextAppearance="@style/error_appearance"
                app:startIconTint="@color/contentTextColor"
                android:hint="@string/FechaInicio"
                app:fontFamily="@font/poppins"
                android:id="@+id/lytFechaInicio"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TxtFechaInicio"
                    android:layout_width="match_parent"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:layout_height="wrap_content"
                    android:textSize="14.0sp"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/BtnConfirmar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_corner5"
                android:backgroundTint="@color/contentTextColor"
                android:text="@string/registrar_button"
                android:textColor="@color/contentBodyColor"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16.7dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>